MetaProxy::Track::playableUrl(): don't return uid url

...when the underlying track is not loaded (yet). We return false to
isPlayable(), so we shouldn't be returning anything either.

URL may be something like amarok-sqltrackuid://2f9277bb7e49962c1c4c5612811807a1
and Phonon may choke on such urls trying to find a codec and causing
a hang.

BUGFIXES:
 * Fix hangs and inappropriate messages when trying to play a track from
   a saved playlist that has been deleted in the mean time.

BUG: 308371
FIXED-IN: 2.7